# syncology

./: .env.example  .gitignore  README.md  _quarto.yml  index.qmd  pyproject.toml
data/: README.md
docs/: A1_COMPLETE.md  apple_health_ingestion_report.md  cycle_marts_report.md  food_reconciliation_report.md  graph_explorer.qmd  schema.md  writeup_biomarker_resolution.qmd  writeup_cycle_inference.qmd  writeup_food_retrieval.qmd
scripts/: benchmark_food_embedders.py  build_activities.py  build_foods.py  build_graph.py  build_marts.py  build_openfoodfacts.py  eval_food_cascade.py  eval_food_corpus.py  eval_food_ditto.py  eval_food_hyde.py  eval_food_rigor.py  eval_resolvers.py  eval_retrieval_matrix.py  extract_labs.py  make_companion_figures.py  make_food_figures.py  normalize_categories.py  parse_apple_health.py  reconcile_foods.py  resolve_biomarkers.py  sweep_ovulation_threshold.py  triage_labs.py
src/syncology/: config.py  db.py
src/syncology/graph/: build.py  ontology.py
src/syncology/ingest/: activities.py  apple_health.py  labs.py  nutrients.py  openfoodfacts.py  strava.py  yazio.py
src/syncology/resolve/: biomarkers.py  embedders.py  food_eval.py  food_labels.py  foods.py  labels.py  llm.py  reference_ranges.py  retrieval.py
src/syncology/transform/: category_values.py  marts.py
tests/: test_apple_health.py  test_biomarkers.py  test_category_values.py  test_food_eval.py  test_foods.py  test_graph.py  test_marts.py  test_nutrients.py  test_openfoodfacts.py  test_reference_ranges.py  test_retrieval.py  test_strava.py  test_yazio.py
